# awsssoreporting

./: .gitignore  LICENSE  README.md  awsssoreporting.py  pyproject.toml  setup.cfg
ThreatDragonModels/awsssoreporting/: awsssoreporting.json
awsssoreporting.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
src/awsssoreporting/: __main__.py
src/awsssoreporting.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
